# tenark

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  mypy.ini  pyproject.toml
tenark/: __init__.py  api.py  arranger.py  associator.py  provider.py  resolver.py  tenant.py
tenark/catalog/: __init__.py  catalog_supplier.py  memory_catalog_supplier.py
tenark/cataloguer/: __init__.py  cataloguer.py  json_cataloguer.py  memory_cataloguer.py  schema_cataloguer.py
tenark/common/: exceptions.py  query_parser.py  types.py
tenark/identifier/: __init__.py  identifier.py  uuid_identifier.py
tenark/models/: __init__.py  tenant.py
tenark/provider/: __init__.py  provider.py  standard_provider.py
tenark/provisioner/: __init__.py  directory_provisioner.py  memory_provisioner.py  provisioner.py  schema_provisioner.py
tests/: test_api.py  test_arranger.py  test_associator.py  test_provider.py  test_resolver.py  test_tenant.py  test_tenark.py
tests/catalog/: test_catalog_supplier.py  test_memory_catalog_supplier.py
tests/cataloguer/: test_cataloguer.py  test_json_cataloguer.py  test_memory_cataloguer.py  test_schema_cataloguer.py
tests/common/: test_query_parser.py
tests/identifier/: test_identifier.py  test_uuid_identifier.py
tests/models/: test_tenant.py
tests/provider/: test_provider.py  test_standard_provider.py
tests/provisioner/: test_directory_provisioner.py  test_memory_provisioner.py  test_provisioner.py  test_schema_provisioner.py
tests/tenant/: test_tenant.py
