[tool.poetry]
name = "tenark"
version = "0.1.0"
description = ""
authors = ["Esteban Echeverry <eecheverry@nubark.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
bump2version = "^0.5.10"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
