[tool.poetry]
name = "tenark"
version = "0.8.3"
description = "Multitenancy Management Library"
authors = ["Knowark"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.780"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pylint = "^2.5.3"
autopep8 = "^1.5.3"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
